--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,8 +12,8 @@ jobs:
 
       - name: Create application-secret.yml
         run: |
+          mkdir -p src/main/resources
           echo "${{ secrets.APPLICATION_SECRET_YML }}" > src/main/resources/application-secret.yml
-
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
