--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,7 +13,8 @@ jobs:
       - name: Create application-secret.yml
         run: |
           mkdir -p src/main/resources
-          echo "${{ secrets.APPLICATION_SECRET_YML }}" > src/main/resources/application-secret.yml
+          printf "%s" "${{ secrets.APPLICATION_SECRET_YML }}" > src/main/resources/application-secret.yml
+
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
