--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: Create application-secret.yml
         run: |
-          echo '${{ secrets.APPLICATION_SECRET_YML_BASE64 }}' | base64 --decode > src/main/resources/application-secret.yml
+          echo '${{ secrets.APPLICATION_SECRET_YML }}' | base64 --decode > src/main/resources/application-secret.yml
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
