--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,6 +14,8 @@ jobs:
         run: |
           mkdir -p src/main/resources
           echo ${{secrets.APPLICATION_SECRET_YML}} | base64 --decode > src/main/resources/application-secret.yml
+          echo "====DEBUG application-secret.yml===="
+          cat src/main/resources/application-secret.yml
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
