--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,6 +26,14 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+        - name: Check application-secret.yml
+        run: |
+          echo "====DEBUG: Check src/main/resources ===="
+          ls -l src/main/resources/
+          echo "====DEBUG: Contents of application-secret.yml ===="
+          cat src/main/resources/application-secret.yml
+
+
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2.6.0
         with:
