--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,10 +12,7 @@ jobs:
 
       - name: Create application-secret.yml
         run: |
-          mkdir -p src/main/resources
           echo ${{secrets.APPLICATION_SECRET_YML}} | base64 --decode > src/main/resources/application-secret.yml
-          echo "====DEBUG application-secret.yml===="
-          cat src/main/resources/application-secret.yml
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -26,7 +23,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Check application-secret.yml
+      - name: Check application-secret-log.yml
         run: |
           echo "====DEBUG: Check src/main/resources ===="
           ls -l src/main/resources/
