--- a/build.gradle
+++ b/build.gradle
@@ -66,14 +66,14 @@ tasks.named('test') {
 }
 
 ext {
-    GOOGLE_CLIENT_ID = System.getenv('GOOGLE_CLIENT_ID')
-    GOOGLE_CLIENT_SECRET = System.getenv('GOOGLE_CLIENT_SECRET')
-    NAVER_CLIENT_ID = System.getenv('NAVER_CLIENT_ID')
-    NAVER_CLIENT_SECRET = System.getenv('NAVER_CLIENT_SECRET')
-    KAKAO_CLIENT_ID = System.getenv('KAKAO_CLIENT_ID')
-    KAKAO_CLIENT_SECRET = System.getenv('KAKAO_CLIENT_SECRET')
-    SOLAPI_KEY = System.getenv('SOLAPI_KEY')
-    SOLAPI_SECRET = System.getenv('SOLAPI_SECRET')
-    SOLAPI_FROM = System.getenv('SOLAPI_FROM')
-    YOUTUBE_API_KEY = System.getenv('YOUTUBE_API_KEY')
+    GOOGLE_CLIENT_ID = System.getenv('GOOGLE_CLIENT_ID') ?: 'default_value'
+    GOOGLE_CLIENT_SECRET = System.getenv('GOOGLE_CLIENT_SECRET') ?: 'default_value'
+    NAVER_CLIENT_ID = System.getenv('NAVER_CLIENT_ID') ?: 'default_value'
+    NAVER_CLIENT_SECRET = System.getenv('NAVER_CLIENT_SECRET') ?: 'default_value'
+    KAKAO_CLIENT_ID = System.getenv('KAKAO_CLIENT_ID') ?: 'default_value'
+    KAKAO_CLIENT_SECRET = System.getenv('KAKAO_CLIENT_SECRET') ?: 'default_value'
+    SOLAPI_KEY = System.getenv('SOLAPI_KEY') ?: 'default_value'
+    SOLAPI_SECRET = System.getenv('SOLAPI_SECRET') ?: 'default_value'
+    SOLAPI_FROM = System.getenv('SOLAPI_FROM') ?: 'default_value'
+    YOUTUBE_API_KEY = System.getenv('YOUTUBE_API_KEY') ?: 'default_value'
 }
