--- a/build.gradle
+++ b/build.gradle
@@ -57,8 +57,24 @@ dependencies {
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.1'
 
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+    implementation 'com.solapi:sdk:1.0.3'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+// Gradle 빌드 시 외부 환경변수로 민감 정보를 주입하는 설정(소셜로그인, 휴대폰인증, 유튜브 기능에 사용)
+ext {
+    GOOGLE_CLIENT_ID = System.getenv('GOOGLE_CLIENT_ID') ?: 'default_value'
+    GOOGLE_CLIENT_SECRET = System.getenv('GOOGLE_CLIENT_SECRET') ?: 'default_value'
+    NAVER_CLIENT_ID = System.getenv('NAVER_CLIENT_ID') ?: 'default_value'
+    NAVER_CLIENT_SECRET = System.getenv('NAVER_CLIENT_SECRET') ?: 'default_value'
+    KAKAO_CLIENT_ID = System.getenv('KAKAO_CLIENT_ID') ?: 'default_value'
+    KAKAO_CLIENT_SECRET = System.getenv('KAKAO_CLIENT_SECRET') ?: 'default_value'
+    SOLAPI_KEY = System.getenv('SOLAPI_KEY') ?: 'default_value'
+    SOLAPI_SECRET = System.getenv('SOLAPI_SECRET') ?: 'default_value'
+    SOLAPI_FROM = System.getenv('SOLAPI_FROM') ?: 'default_value'
+    YOUTUBE_API_KEY = System.getenv('YOUTUBE_API_KEY') ?: 'default_value'
 }
