--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -102,3 +102,7 @@ spring:
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
+
+file:
+  upload:
+    path: /var/lib/kmarket/uploads/
